--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,400;0,500;0,600;1,100;1,500;1,600&display=swap');
 :root {
 
   --blue-backgrounds:#000D7F;
@@ -6,4 +7,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+body{
+  font-family: 'Raleway', sans-serif;
 }
