--- a/src/pages/HomePage/Components/Home__Header/Home__Header.css
+++ b/src/pages/HomePage/Components/Home__Header/Home__Header.css
@@ -212,7 +212,10 @@
   width: 70px;
   height: 70px;
 }
-
+.home__hero{
+  max-width: 1750px;
+  margin: auto;
+}
 @media(max-width:1049px) {
   .home__header-hero {
     margin: 5px;
