--- a/src/pages/AdminPanel/Components/AdminSideBar/AdminSideBar.scss
+++ b/src/pages/AdminPanel/Components/AdminSideBar/AdminSideBar.scss
@@ -1,4 +1,4 @@
-.StudentSideBar{
+.AdminSideBar{
     height: 100vh;
     width: 20%;
     background-color: var(--blue-backgrounds);
@@ -93,6 +93,18 @@
     }
 
 }
+@media screen and (max-width:1272px) {
+    .kattatext{
+        font-size: 14px !important;
+        font-weight: 600;
+    }
+}
+@media screen and (max-width:1150) {
+    .kattatext{
+        font-size: 12px !important;
+        font-weight: 600;
+    }
+}
 @media screen and (max-width:1050px) {
     .logo{
         padding:30px 0 0 25px !important;
@@ -106,7 +118,7 @@
             display: none !important;
         }
     }
-    .StudentSideBar{
+    .AdminSideBar{
         width: auto;
     }
     
