--- a/src/pages/AdminPanel/Components/AdminSideBar/AdminSideBar.scss
+++ b/src/pages/AdminPanel/Components/AdminSideBar/AdminSideBar.scss
@@ -93,6 +93,28 @@
     }
 
 }
+.SidebarLinks{
+    border: none;   
+    position: relative;
+    z-index: 2;
+    display: flex;
+    flex-direction: row;
+    color: var(--white-text-color);
+    text-decoration: none;
+    align-items:center;
+
+    padding-left: 30px;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    height: 56px;
+    letter-spacing: 0.36px;
+    svg{
+        margin-right: 21px;
+    }
+    background-color: transparent;
+}
 @media screen and (max-width:1272px) {
     .kattatext{
         font-size: 14px !important;
@@ -123,3 +145,4 @@
     }
     
 }
+
